# vulnscope

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_UA.md  docker-compose.yml  pyproject.toml  vulnscope.yaml
.github/workflows/: ci.yml  create-release.yml  publish-on-release.yml
docs/: architecture.md  cli.md  deployment.md  development.md  index.md  rules.md  security-model.md
docs/en/: architecture.md  configuration.md  deployment.md  reports.md  scanner.md  tui.md
docs/ua/: architecture.md  cli.md  configuration.md  deployment.md  development.md  index.md  reports.md  rules.md  scanner.md  security-model.md  tui.md
examples/: custom-rule.yaml  github-actions-vulnscope.yml  sample-report.json  vulnscope.yaml
rules/fingerprints/: frameworks.yaml  javascript_libraries.yaml  servers.yaml
rules/owasp_top10/: 01-injection.yaml  02-broken_access_control.yaml  03-cryptographic_failures.yaml  04-insecure_design.yaml  05-security_misconfiguration.yaml  06-vulnerable_components.yaml  07-authentication_and_identification.yaml  08-software_data_integrity.yaml  09-logging_and_monitoring.yaml  10-ssrf.yaml
rules/web/: blind_sql_injection.yaml  content_type_options.yaml  cookies.yaml  information_disclosure.yaml  open_redirect.yaml  path_traversal.yaml  permissions_policy.yaml  referrer_policy.yaml  security_headers.yaml  server_errors.yaml  sql_injection.yaml  ssrf.yaml  xss.yaml
src/vulnscope/: __init__.py  __main__.py  app.py  cli.py  config.py  logging.py
src/vulnscope/domain/: enums.py  models.py  scoring.py
src/vulnscope/reports/: __init__.py  exporters.py  html.py  json.py  markdown.py
src/vulnscope/rules/: __init__.py  engine.py  feed.py  loader.py  matchers.py  schema.py  server.py
src/vulnscope/scanner/: __init__.py  analyzer.py  crawler.py  engine.py  fingerprints.py  http_client.py  payloads.py  profiles.py  scope.py
src/vulnscope/storage/: database.py  migrations.py  repositories.py
src/vulnscope/tui/: bindings.py  controllers.py  main.py  screens.py  styles.tcss  widgets.py
src/vulnscope/utils/: text.py  (+3 more)
tests/: test_config.py  test_crawler.py  test_engine.py  test_intelligence.py  test_payloads.py  test_reports.py  test_rules.py  test_scope.py  test_scoring.py
tests/fixtures/: sample.html
(+1 files in other folders)
