[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vulnscope"
description = "TUI-first safe vulnerability scanner for web applications."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "VulnScope contributors" }]
dynamic = ["version"]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
  "textual>=0.86,<1",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[project.scripts]
vulnscope = "vulnscope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vulnscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.version]
source = "vcs"

